--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -26,4 +26,12 @@ android {
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
+
+    implementation 'com.acmerobotics.roadrunner:core:1.0.0-beta2' //rr
+    implementation 'com.acmerobotics.roadrunner:actions:1.0.0-beta2' //rr
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7' //rr
+
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.13' //dashbaord
+
+    implementation 'org.ftclib.ftclib:core:2.1.1' // core
 }
